[SELC-6064] fix: sonar smells